# vpn_service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: requester.py  utils.py
src/accounts/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
src/accounts/migrations/: 0001_initial.py
src/config/: settings.py  urls.py
src/sites/: converters.py  forms.py  models.py  url_modifiers.py  urls.py  views.py
src/sites/migrations/: 0001_initial.py  0002_site_name.py
src/templates/: base.html
src/templates/accounts/: 404.html  forbidden.html  login.html  register.html  update_user_profile.html  user_profile.html
src/templates/sites/: create_site.html  delete_site.html  statistics.html
