[tool.poetry]
name = "vpn-service"
version = "0.1.0"
description = ""
authors = ["AlexandrZhydyk <zhydykalex@ukr.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
pillow = "^10.2.0"
requests = "^2.31.0"
tldextract = "^5.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
